<resources>
    <string name="app_name">Reto2Grupo1</string>
    <string name="Email">Email</string>
    <string name="Login">LOGIN</string>
    <string name="Registrar">Registrar</string>
    <string name="nombreDeUsuario">Nombre de usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="guardarUsuarioYContraseña">Guardar Usuario Y Contraseña</string>
    <string name="titulo">ElorChat</string>
    <string name="cambiarFoto">Cambiar tu foto</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="Direccion">Dirección</string>
    <string name="telefono1">Telefono1</string>
    <string name="telefono2">Telefono2</string>
    <string name="repetirContraseña">RepetirContraseña</string>
    <string name="ciclo">Ciclo formativo</string>
    <string name="curso">Curso</string>
    <string name="fctdual">FCT/DUAL</string>
    <string name="cambioDeContraseña">Cambio de Contraseña</string>
    <string name="mail">Email</string>
    <string name="departamento">Departamento</string>
    <string name="email">Email</string>

    <string name="borrar">Borrar</string>

    <string name="castellano">Castellano</string>
    <string name="ingles">Ingles</string>
    <string name="euskera">Euskera</string>

    <!--    parte de recuperar contraseña-->
    <string name="escribe_el_correo_electronico_donde_se_desee_mandar_la_solicitud">Escribe el correo electronico donde se desee mandar la solicitud</string>
    <string name="enviar_correo">Enviar correo</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>

</resources>